@@ -1,3 +1,9 @@
+2005-09-17  Sergey Poznyakoff  <gray@Mirddin.farlep.net>  (tiny change)
+
+	* makeinfo/cmds.c (handle_include): don't expand @verbatiminclude,
+	so that texi2dvi will pass it through to texinfo.tex.  Otherwise
+	the dvi/pdf output is wrong.
+
 2005-09-05  Stepan Kasal  <kasal@ucw.cz>
 
 	* doc/texinfo.tex: Fix typo in a comment.
